# watch_them_dance

./: .env  .gitignore  LICENSE  main.py  pyproject.toml
.data/llm_bakes/employee_questions/: faiss.index  md.db
hr_game.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hr_game/creation/: companys.json  employee.py  employee_names.txt  network.py
hr_game/data/: company.py  employee.py
hr_game/engine/: game_loop.py
hr_game/events/: base.py  crisis.py  example.py  llm_generation.py  user_actions.py  utils.py
hr_game/llm/: scoring.py  utils.py
hr_game/llm/llm_pre_baking/: employee_problem.py
hr_game/simulation/: run.py
hr_game/views/: office.py
